module12/deploy/destination.yaml
# Source: destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpserver
spec:
  host: httpserver
  subsets:
  - name: v1
    labels:
      app.kubernetes.io/name: httpserver
      app.kubernetes.io/instance: m12
      version: v1
  - name: v2
    labels:
      app.kubernetes.io/name: httpserver
      app.kubernetes.io/instance: m12
      version: v2
